--- a/Portfolio index.html
+++ b/Portfolio index.html
@@ -36,7 +36,9 @@
       
       <head>
             <title>Katie Chang - Designer</title>
-            <link rel="icon" href="https://github.com/webprojectkatie/Destiny/blob/master/pic/KS%20big.png?raw=true" type="image/ico" />
+            <link rel="shortcut icon" href="/favicon.ico"/>
+
+            <link rel="bookmark" href="/favicon.ico"/>
         
             <meta name="viewport" content="initial-scale=1.0">
             <meta charset="utf-8">
