--- a/BMI calculator.html
+++ b/BMI calculator.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
+    <title>Katie Chang - Designer</title>
+    <link rel="icon" href="https://github.com/webprojectkatie/PortfolioKatie/blob/master/pic/k.png?raw=true" type="image/ico" />
+    
+    <meta name="viewport" content="initial-scale=1.0">
+    <meta charset="utf-8">
+</head>
 </head>
 <body>
   <h1>  BMI calculator  </h1>
